Template Fixes (hyphen glitch)

--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -15,7 +15,7 @@
           </td>
 
           <td>
-            {{ item.system.description }}
+            {{{ item.system.description }}}
           </td>
           <td class="td-controls">
             <li class="item flexrow" data-item-id="{{ item._id }}">
@@ -49,9 +49,7 @@
           <tr>
             <td>{{ item.name }}</td>
             <td>
-              {{ system.junk.type1 }} ({{ system.junk.quantity1 }}) {{ system.junk.type2 }} ({{
-                system.junk.quantity2
-              }}) {{ system.junk.type3 }} ({{ system.junk.quantity3 }})
+              {{ system.junk.type1 }} ({{ system.junk.quantity1 }}) {{ system.junk.type2 }} ({{system.junk.quantity2}}) {{ system.junk.type3 }} ({{ system.junk.quantity3 }})
             </td>
             <td class="td-controls">
               <li class="item flexrow" data-item-id="{{ item._id }}">
