--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -18,12 +18,12 @@
               <td>STR Req.</td>
             </tr>
             <tr>
-              <td>{{ system.base-cost.value }}</td>
+              <td>{{ system.baseCost.value }}</td>
               <td>{{ system.armorClass.value }}</td>
               <td>{{ system.damageThreshold.value }}</td>
               <td>{{ system.slots.value }}</td>
               <td>{{ system.load.value }}</td>
-              <td>{{ system.str-req.value }}</td>
+              <td>{{ system.strReq.value }}</td>
             </tr>
           </table>
           <div class="item-controls">
