--- a/templates/actor/parts/actor-medicines.hbs
+++ b/templates/actor/parts/actor-medicines.hbs
@@ -20,7 +20,7 @@
           </td>
 
           <td style="width: 70%; text-align: left; padding: 10px">
-            {{ item.system.description }}
+            {{{ item.system.description }}}
             <li class="item flexrow" data-item-id="{{ item._id }}">
               <div class="item-controls">
                 <a
