--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -24,8 +24,8 @@
           <td>
             <input
               type="number"
-              name="system.base-cost.value"
-              value="{{ system.base - cost.value }}"
+              name="system.baseCost.value"
+              value="{{ system.baseCost.value }}"
             />
           </td>
           <td>
@@ -47,7 +47,7 @@
           </td>
           <td><input type="number" name="system.load.value" value="{{ system.load.value }}" /></td>
           <td>
-            <input type="number" name="system.str-req.value" value="{{ system.str - req.value }}" />
+            <input type="number" name="system.strReq.value" value="{{ system.strReq.value }}" />
           </td>
         </tr>
       </table>
