--- a/templates/actor/actor-character-sheet.hbs
+++ b/templates/actor/actor-character-sheet.hbs
@@ -223,48 +223,24 @@
           </table>
         </form>
       </div>
-	  
     </header>
-	<table style="margin-top:-40px;">
-	  <tr>
-		<td colspan="999" class="karmaCap">
-		  <input
-			type="checkbox"
-			name="system.karmaCapflipped"
-			{{checked
-			system.karmaCapflipped}}
-		  />
-		  <input
-			type="checkbox"
-			name="system.karmaCapflipped2"
-			{{checked
-			system.karmaCapflipped2}}
-		  />
-		  <input
-			type="checkbox"
-			name="system.karmaCapflipped3"
-			{{checked
-			system.karmaCapflipped3}}
-		  />
-		  <input
-			type="checkbox"
-			name="system.karmaCapflipped4"
-			{{checked
-			system.karmaCapflipped4}}
-		  /><input
-			type="checkbox"
-			name="system.karmaCapflipped5"
-			{{checked
-			system.karmaCapflipped5}}
-		  /><input
-			type="checkbox"
-			name="system.karmaCapflipped6"
-			{{checked
-			system.karmaCapflipped6}}
-		  />								  
-		</td>
-	  </tr>
-	</table>
+    <table style="margin-top: -40px">
+      <tr>
+        <td colspan="999" class="karmaCap">
+          <div style="display: flex">
+            {{#each system.karmaCaps as |flipped| }}
+            <button data-cap-flip data-index="{{@index}}" class="karma-cap">
+              {{#if flipped}}
+              <img src="/systems/arcane-arcade-fallout/assets/Cap_Back_Facing.webp" />
+              {{else}}
+              <img src="/systems/arcane-arcade-fallout/assets/Cap_Front_Facing.webp" />
+              {{/if}}
+            </button>
+            {{/each}}
+          </div>
+        </td>
+      </tr>
+    </table>
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
       {{!-- Default tab is specified in actor-sheet.mjs --}}
