CSS and More Enemy Icons

--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -424,6 +424,7 @@ details > summary {
 .sheet a,
 .sheet a:hover,
 .sheet li,
+form .title,
 .falloutzero .items-list .item .item-name {
   color: #01e998;
 }
