Perks Updated / Icons Updated

--- a/templates/actor/parts/actor-backpack.hbs
+++ b/templates/actor/parts/actor-backpack.hbs
@@ -47,7 +47,7 @@
         <table class="foodanddrinks">
           {{#each junk as |item id|}}
           <tr>
-            <td>{{ item.name }}</td>
+            <td>{{ item.name }} ({{item.quantity}})</td>
             <td>
               {{ system.junk.type1 }} ({{ system.junk.quantity1 }}) {{ system.junk.type2 }} ({{system.junk.quantity2}}) {{ system.junk.type3 }} ({{ system.junk.quantity3 }})
             </td>
