--- a/templates/item/item-junkItem-sheet.hbs
+++ b/templates/item/item-junkItem-sheet.hbs
@@ -5,6 +5,7 @@
       <h1 class="charname">
         <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
       </h1>
+		Qty: <input style="width:50px;" type="number" name="system.quantity" value="{{ system.quantity }}" />
     </div>
   </header>
   <table>
