--- a/templates/item/item-perk-sheet.hbs
+++ b/templates/item/item-perk-sheet.hbs
@@ -29,13 +29,13 @@
             />
           </td>
           <td>
-            <span>Qty:</span>
+            <span>Level:</span>
             <input
               style="width: 35px; text-align: center"
               type="number"
               min="1"
-              name="system.perk-level.value"
-              value="{{system.perk-level.value}}"
+              name="system.perkLevel.value"
+              value="{{system.perkLevel.value}}"
             />
           </td>
         </tr>
