--- a/templates/actor/actor-npc-sheet.hbs
+++ b/templates/actor/actor-npc-sheet.hbs
@@ -145,6 +145,18 @@
                             />
                           </td>
                         </tr>
+						 <tr>
+                          <td>
+                            <button data-recycle-ap title="Refresh AP During Combat">
+                              <i class="fa-solid fa-recycle"></i>
+                            </button>
+                          </td>
+                          <td>
+                            <button data-refill-ap title="Refresh AP Outside of Combat">
+                              <i class="fa-regular fa-arrow-up-right-dots"></i>
+                            </button>
+                          </td>
+                        </tr>
                         <tr>
                           <td>
                             <input
