--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -592,19 +592,18 @@ td,
   width: 10px;
 }
 
-.sheet button.karma-cap {
-  display: flex;
-  align-items: center;
-  background-color: transparent;
+.sheet .karmaCap input[type='checkbox'] {
+  content: url('/systems/arcane-arcade-fallout/assets/Cap_Back_Facing.webp');
+  appearance: none;
+  display: block;
   width: 50px;
   height: 50px;
   border: none;
 }
 
-.sheet button.karma-cap > img {
-  border: none;
+.sheet .karmaCap input[type='checkbox']:checked {
+  content: url('/systems/arcane-arcade-fallout/assets/Cap_Front_Facing.webp');
 }
-
 .htmlfield {
   padding: 20px;
 }
@@ -612,23 +611,23 @@ td,
   float: left;
 }
 
-form td .status-notes{
-	height:334px;
-	text-align:left;
-	overflow:scroll;
-	background-color:#222;
-	background-image:url('/systems/arcane-arcade-fallout/assets/vaultboy/vaultboy-icon.png');
-	background-size:cover;
-	background-repeat:no-repeat;
-	font-size:10pt;
-	padding:20px;
+form td .status-notes {
+  height: 334px;
+  text-align: left;
+  overflow: scroll;
+  background-color: #222;
+  background-image: url('/systems/arcane-arcade-fallout/assets/vaultboy/vaultboy-icon.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-size: 10pt;
+  padding: 20px;
 }
 
 form td .status-notes option,
 form td .status-notes li,
-form td .status-notes li:hover{
-	background:black;
+form td .status-notes li:hover {
+  background: black;
 }
-.directory .directory-header .header-search input{
-	background:#222;
+.directory .directory-header .header-search input {
+  background: #222;
 }
