Added Decay Feature to Ranged Weapons / Added Icons

--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -631,3 +631,6 @@ form td .status-notes li:hover {
 .directory .directory-header .header-search input {
   background: #222;
 }
+.item .item-box{
+	max-width:425px;
+}
