--- a/templates/item/item-meleeWeapon-sheet.hbs
+++ b/templates/item/item-meleeWeapon-sheet.hbs
@@ -13,6 +13,7 @@
       </h1>
       <table>
         <tr>
+		  <td>Decay</td>
           <td>Cost</td>
           <td>AP</td>
           <td>Damage</td>
@@ -20,6 +21,9 @@
           <td>STR Req.</td>
         </tr>
         <tr>
+          <td>
+            <input type="number" name="system.decay" value="{{ system.decay }}" />
+          </td>		
           <td>
             <input type="number" name="system.cost" value="{{ system.cost }}" />
           </td>
