--- a/templates/actor/parts/actor-items.hbs
+++ b/templates/actor/parts/actor-items.hbs
@@ -1,7 +1,7 @@
 <!-- Armor Slot -->
 {{#each armors as |item id|}}
-<div class="item flexrow" data-item-id="{{ item._id }}">
-  <table>
+<div class="item" data-item-id="{{ item._id }}">
+  <table class="item-box" style="margin:auto;">
     <tr>
       <td>
         <details open="true">
@@ -58,7 +58,7 @@
   <summary>
     <p class="allcaps">AMMO</p>
   </summary>
-  <table>
+  <table class="item-box">
     <tr data-item-id="ammo">
       <td>
         {{#each ammos as |item id|}}
@@ -101,7 +101,8 @@
       <!-- Ranged Weapons Slot -->
       {{#each rangedWeapons as |item id|}}
       <div class="item flexrow weapons-div" data-item-id="{{ item._id }}">
-        <table class="weapons-table">
+        <table  class="item-box weapons-table left">
+		<tr>
           <tr>
             <td>
               <details open="true">
@@ -121,7 +122,7 @@
                     <td>Crit DV</td>
                     <td>Crit Dmg</td>
                     <td>Load</td>
-                    <td>Str Req</td>
+                    <td>Str</td>
                   </tr>
                   <tr>
                     <td>
@@ -228,6 +229,17 @@
                       {{/each}}
                     </td>
                   </tr>
+				   <tr>
+					<td colspan="999"><span title="Every Level Of Decay Lowers this Number">CND: </span><progress
+                              class="statusbar stamina"
+                              value="{{item.system.decay}}"
+                              max="10"
+                            >
+                              {{item.system.decay}}
+                            </progress>
+					</td>		  
+					  </td>
+					 </tr>
                 </table>
                 <div class="item-controls">
                   <a
@@ -259,7 +271,7 @@
       <!-- MeleeWeapons Slot -->
       {{#each meleeWeapons as |item id|}}
       <div class="item flexrow weapons-div" data-item-id="{{ item._id }}">
-        <table class="weapons-table">
+        <table  class="item-box weapons-table right">
           <tr>
             <td>
               <details open="true">
@@ -316,6 +328,10 @@
                     <td>{{ system.ammo.type }}</td>
                     <td>{{ system.ammo.capacity.value }}</td>
                   </tr>
+				  <tr>
+				  <td colspan="999"> Hello?
+					</td>	
+				  </tr>
                 </table>
                 {{/if}}
                 <div class="item-controls">
