--- a/css/falloutzero.css
+++ b/css/falloutzero.css
@@ -634,7 +634,7 @@ form td .status-notes li:hover {
 .prosemirror {
   display: flex;
   flex-direction: column;
-  --color-control-bg: #222; */
+  --color-control-bg: #222;
   --color-hover-bg: #222
   background: #222;
 }
