--- a/templates/item/item-armor-sheet.hbs
+++ b/templates/item/item-armor-sheet.hbs
@@ -11,6 +11,7 @@
       <h1 class="charname">
         <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
       </h1>
+	  <input type="number" name="system.decay" value="{{system.decay}}">
       <table>
         <tr>
           <td>Cost</td>
