--- a/templates/item/item-rangedWeapon-sheet.hbs
+++ b/templates/item/item-rangedWeapon-sheet.hbs
@@ -12,6 +12,7 @@
         <input name="name" type="text" value="{{ item.name }}" placeholder="Name" />
       </h1>
       <table>
+	  <tr>
         <tr>
 		  <td title="Every Level of Decay Lowers This Number. Item Breaks At 0">CND</td>
           <td>Cost</td>
@@ -48,7 +49,7 @@
           <td>Ammo</td>
           <td>Capacity</td>
           <td>Load</td>
-          <td  colspan=2>Crit Roll</td>
+          <td>Crit Roll</td>
           <td>Crit Bonus</td>
         </tr>
         <tr>
@@ -113,7 +114,7 @@
     <div class="tab" data-group="primary" data-tab="description">
       {{!-- To render inline rolls in a TinyMCE editor, you need to pass the parent actor's (if any) roll data to
 			the rollData prop. --}}
-      {{editor system.description target="system.description" rollData=rollData button=true owner=owner
+      {{editor system.description target="system.description" rollData=rollData button=true owner=owner engine="prosemirror"
 			editable=editable}}
     </div>
     {{!-- Upgrades Tab --}}
